<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodEx</string>
    <string name="action_settings">Settings</string>
    <string name="user_category">Login as</string>
    <string name="canteen_manager">Canteen Manager</string>
    <string name="student">Student</string>
    <string name="heading1">FoodEx</string>
    <string name="heading2">Login Success!</string>
    <string name="heading3">Register Here</string>
    <string name="hint_uid">ID</string>
    <string name="hint_user">Name</string>
    <string name="hint_pwd">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="logout_button">LOGOUT</string>
    <string name="selectphoto">SELECT PHOTO</string>
    <string name="view_menu">Menu</string>
    <string name="order_dtls">Show pending orders</string>
    <string name="manage_account">Manage Account</string>
    <string name="add_dish">Add Dish</string>
    <string name="add">Add to menu</string>
    <string name="create_dish">Create Dish</string>
    <string name="hint_dish">Enter name of the Dish</string>
    <string name="hint_veg">Veg/Non-Veg</string>
    <string name="hint_duration">Cooking Duration</string>
    <string name="hint_create">Create</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_add">Add</string>
    <string name="hint_place_order">Place Order</string>
    <string name="enterprice">Enter Price</string>
    <string name="back">BACK</string>
    <string name="place_order">Place Order</string>
    <string name="view_acnt">View Account</string>
    <string name="enterquantity">Enter Quantity</string>
    <string name="entercollecttime">Enter Collecting Time</string>
    <string name="my_order_status">View My Orders Status</string>
</resources>