<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/dish_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_dish" />
    <EditText
        android:id="@+id/veg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_veg"/>
    <EditText
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_duration"/>

</LinearLayout>
