<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070957"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/txtheading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:gravity="center"
        android:text="@string/heading1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_uid"
        android:textSize="25sp"
        android:layout_below="@+id/txtheading1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/student_id"
        android:layout_alignStart="@+id/student_id"
        android:layout_below="@+id/student_id"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_button"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_below="@+id/password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/txtheading1"
        android:layout_toEndOf="@+id/txtheading1" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textSize="30sp"
        android:textColor="#ffffffff"
        android:background="#717177"
        android:layout_alignBaseline="@+id/btnLogin"
        android:layout_alignBottom="@+id/btnLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>