<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070957"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txtheading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:gravity="center"
            android:text="@string/heading3"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/hint_uid"
            android:textSize="25sp"
            android:layout_below="@+id/txtheading3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/hint_user"
            android:textSize="25sp"
            android:layout_below="@+id/student_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:layout_below="@+id/student_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription"
            android:layout_below="@+id/password"
            android:scaleType="fitXY" />


        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/selectphoto"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/register_button"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="30sp" />


    </RelativeLayout>
</ScrollView>
