<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6bb7bc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pooja.foodex.MainActivity">

    <TextView
        android:id="@+id/user_ctgry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:gravity="center"
        android:text="@string/user_category"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/btnStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student"
        android:textSize="25sp"
        android:textColor="#ffffffff"
        android:background="#717177"
        android:layout_below="@+id/user_ctgry" />

    <Button
        android:id="@+id/btnCanteen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/canteen_manager"
        android:textSize="25sp"
        android:textColor="#ffffffff"
        android:background="#717177"
        android:layout_below="@+id/btnStudent"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
